@@ -28,9 +28,11 @@
         <setting id="hosts.mode" type="enum" label="32331" lvalues="32332|32333|32334" default="1" />
         <setting id="progress.dialog" type="enum" label="32335" lvalues="32336|32337" default="0" />
         <setting id="scrapers.timeout.1" type="slider" label="32312" default="45" range="10,60" option="int" />
-        <setting id="prem.identify" type="enum" label="32588" lvalues="32589|32590|32591|32592|32593|32594|32595|32596|32597|32598" default="6" />
-        <setting id="preemptive.termination" type="bool" label="32618" default="False" />
+        <setting id="preemptive.termination" type="bool" label="32618" default="false" />
         <setting id="preemptive.limit" type="slider" label="32619" default="10" range="1,50" option="int" enable="eq(-1,true)" />
+        <setting id="prem.identify" type="select" label="32588" lvalues="32589|32590|32591|32592|32593|32594|32595|32596|32597|32598" default="6" />
+        <setting id="sec.identify" type="select" label="32626" lvalues="32589|32590|32591|32592|32593|32594|32595|32596|32597|32598" default="4" />
+        <setting id="linesplit" type="enum" label="32628" lvalues="32629|32630|32631" default="0" />
         <setting type="lsep" label="32338" />
         <setting id="hosts.quality" type="enum" label="32339" values="4K|1440p|1080p|720p|SD" default="0" />
         <setting id="autoplay.sd" type="bool" label="32620" default="false" />
